Changes for 1.2.7
* directOwnershipTerritories National Objective added, ownership by an ally doesn't count. (astabada/franz)

* Enhanced Combat Support attachments. (squid daddy)

* Moore AI purchases tweaking and speeding up. Will no longer consider for purchasing units with zero movement, units with 3 or more attack than defense or defense than attack, 
  and units with zero defense, and sea units with 1 movement, if there are 2 movement sea units available. Also now records when it purchases transports in getDidPurchaseTransports(). (veqryn)

* Null Pointer Exception fix in StrongAI transporting. (veqryn)

* Moore AI fixes for previous update. (veqryn)

* Create new CompositeRouteFinder.java, which will find a route based on 3 territory composite matches. (wisconsin)

* Moore AI fixed several of the reasons why ai can't seem to transport units intelligently or at all. Also made it buy more transports if it needs them. Added new matches and renamed findCertainShips to findTersWithUnitsMatching. (wisconsin)

* Moore AI out of bounds exception fixed in SUtils.removeUnit(). (veqryn)

* Moore AI speed fix, and added combined getNeighbors() to GameMap.java. Moore AI now as additional logging properties, comments, and several methods updated to work much faster. (squidbait)

* New Unit Option: "isAirBase" allows units to scramble to combat (ComradeKev)

* New Unit Option: "maxOperationalDamage" sets max damage to be sustained before unit is disabled (ComradeKev)

* New Unit Option: "maxDamage" sets total max damage for a unit (ComradeKev)

* New Unit Option: "isInfrastructure" infrastructure units can be bombed (ComradeKev)

* New Unit Option: "isCombatInfrastructure" units can be bombed or taken as casualties in regular combat (ComradeKev)

* New Property: "Display Units as Counters" (COUNTERS_DISPLAY), will make stacks out of units up to a certain amount. (Edwin van der Wal)
